--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-title:              Massively
+title:              TechWaterMedia
 bio:                'Jekyll version of the Massively theme by HTML5UP'
 description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
@@ -27,6 +27,10 @@ background_image:   /images/bg.jpg
 slapform_thankyou_page: /thank-you
 
 defaults:
+- scope:
+    path: ''
+  values:
+    title: TechWaterMedia
 - scope:
     path: ''
     type: posts
