* references folder for unused pages

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,7 +1,7 @@
 site-title: "TechWaterMedia"
 name: "Admor Aguilar"
-short-description: "Game Developer (Unity, Unreal) <br> Manila, Philippines"
-description: "Specializes on PC, Mobile (Android, iOS), and VR/AR. <br> Strengths are in Systems Architecture, Optimization, UI, and Gameplay. <br>"
+short-description: "Game Developer (Unity, Unreal)"
+description: "Specializes on PC, Mobile (Android, iOS), and VR/AR. <br> Strengths are in Systems Architecture, Optimization, UI, and Gameplay."
 current-position-name: "Unity Developer"
 current-company-name: "David Morgan Education"
 current-company-website: "https://dm-ed.com/"
