* Responsive YouTube embed added

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ plugins:
   - jekyll-feed
   - jekyll-gist
   - jekyll-paginate
+  - jekyll-html5-youtube
 
 paginate: 6
 paginate_path: "/blog/page:num/"
