* Reword some descriptions

--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -50,7 +50,7 @@ experiences: [
     duration: "2019 - Present",
     header: "Using <strong>UNITY</strong>, Working closely with the development team to create a platform to teach kids of age 3-6 to read through various mini-games.",
     descriptions: [
-      "Entrusted by the Lead Developer and the CEO, created crucial and <strong>SCALABLE FRAMEWORKS/TOOLS</strong> to help build mini-games fast and efficiently.",
+      "Entrusted by the Team Lead and the CEO, created crucial and <strong>SCALABLE FRAMEWORKS/TOOLS</strong> to help build mini-games fast and efficiently.",
       "Analyzed the app to do the <strong>OPTIMIZATIONS</strong> needed for it to run smoothly across <strong>ANDROID</strong> and <strong>iOS</strong>. Greatly increasing the performance by 70%.",
       "Managing deployment of builds to <strong>Google Play Store</strong>, and <strong>Apple App Store</strong>."
     ],
