~ Fix bg gif not found as it's tracked on Git LFS

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ disqus_shortname:   default
 analytics-id:       "default"
 
 # Other
-background_image:   /images/bg.gif
+background_image:   https://media.githubusercontent.com/media/admoraguilar/admoraguilar.github.io/master/images/bg.gif
 # Tip: The color palette and other styles can be configured in /_sass/lib/_vars.scss
 slapform_thankyou_page: /thank-you
 
